@@ -7,8 +7,10 @@ export(createLabBookConfig)
 export(createNewProject)
 export(createProjectReport)
 export(createTODOreport)
+export(fixTime)
 export(getMyProjects)
 export(getMyTODO)
+export(getTasksForToday)
 export(getTasksPerWeek)
 export(loadLabBookConfig)
 import(kableExtra)
